--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -191,7 +191,7 @@ main .ctn__flex {
 main .ctn__flex .about {
   flex: 1;
   flex-basis: 300px;
-  max-width: 730px;
+  max-width: 700px;
   display: flex;
   gap: 60px;
   flex-direction: column;
@@ -214,6 +214,7 @@ main .ctn__flex .about__header h2 {
   -webkit-background-clip: text;
   color: transparent;
   padding-left: 30px;
+  word-wrap: break-word;
 }
 main .ctn__flex .about__body {
   display: flex;
@@ -231,12 +232,34 @@ main .ctn__flex .about__body .form {
   gap: 20px;
 }
 main .ctn__flex .about__body .form__infos {
+  position: relative;
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
 }
-main .ctn__flex .about__body .form__infos input {
+main .ctn__flex .about__body .form__infos div {
+  position: relative;
   flex: 1;
+}
+main .ctn__flex .about__body .form__infos label {
+  position: absolute;
+  top: -50%;
+  color: #5c5c5c;
+  left: 10px;
+  display: none;
+}
+main .ctn__flex .about__body .form__infos input {
+  position: relative;
+  width: 100%;
+}
+main .ctn__flex .about__body .form__infos input:focus + label {
+  display: block;
+}
+main .ctn__flex .about__body .form__infos input:focus::-moz-placeholder {
+  opacity: 0;
+}
+main .ctn__flex .about__body .form__infos input:focus::placeholder {
+  opacity: 0;
 }
 main .ctn__flex .about__body .form input,
 main .ctn__flex .about__body .form textarea {
@@ -261,9 +284,8 @@ main .ctn__flex .about__body .form button {
   background: #cbcbcb;
   cursor: pointer;
 }
-main .ctn__flex .about__body .form button::after {
-  content: url("data:image/svg+xml,%3Csvg width='20' height='20' fill='currentColor' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M21.955 2.857a.625.625 0 0 0-.813-.812L2.96 9.319h-.002l-.565.225a.625.625 0 0 0-.102 1.108l.512.325.002.003 6.243 3.972 3.973 6.244.003.002.325.513a.625.625 0 0 0 1.107-.104l7.5-18.75ZM19.664 5.22l.588-1.473-1.472.589-9.368 9.367.423.27a.607.607 0 0 1 .192.192l.27.422 9.367-9.367Z' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E");
-  position: relative;
+main .ctn__flex .about__body .form button:hover, main .ctn__flex .about__body .form button:focus {
+  background: white;
 }
 main .ctn__flex .about__body .form textarea {
   resize: none;
@@ -301,6 +323,109 @@ main .ctn__flex .about__footer ul svg:hover path {
 main .ctn__flex .about__aside {
   flex: 1;
 }
+main .ctn__flex .projects {
+  flex: 1;
+  flex-basis: 300px;
+  max-width: 700px;
+  display: flex;
+  gap: 60px;
+  flex-direction: column;
+  font-family: "Source Sans 3", sans-serif;
+}
+main .ctn__flex .projects p, main .ctn__flex .projects q {
+  color: var(--clr-text);
+  font-size: 1.2rem;
+}
+main .ctn__flex .projects span {
+  color: #9b9b9b;
+  font-weight: 600;
+}
+main .ctn__flex .projects__header h2 {
+  font-family: "Playfair Display", serif;
+  font-size: 8rem;
+  background: linear-gradient(to right, #d4d4d4, rgb(255, 255, 255));
+  background-size: 200% 200%;
+  background-clip: text;
+  -webkit-background-clip: text;
+  color: transparent;
+  padding-left: 30px;
+  word-wrap: break-word;
+}
+main .ctn__flex .projects__body {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
+}
+main .ctn__flex .projects__body ul {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  list-style: none;
+}
+main .ctn__flex .projects__body ul li {
+  position: relative;
+  display: flex;
+  align-items: center;
+  background: rgb(34, 34, 34);
+  height: 60px;
+  border-radius: 5px;
+}
+main .ctn__flex .projects__body ul li label {
+  padding-left: 10px;
+}
+main .ctn__flex .projects__body ul li input {
+  position: absolute;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
+  width: 100%;
+  height: 100%;
+  cursor: pointer;
+}
+main .ctn__flex .projects__body ul li input:checked ~ label::backdrop {
+  content: "nafnapzfnoa";
+  position: relative;
+  color: red;
+  width: 400px;
+  background: white;
+  aspect-ratio: 1/1;
+}
+main .ctn__flex .projects__footer {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+}
+main .ctn__flex .projects__footer q {
+  font-style: italic;
+}
+main .ctn__flex .projects__footer ul {
+  display: flex;
+  gap: 40px;
+  list-style: none;
+}
+main .ctn__flex .projects__footer ul a:-moz-any-link {
+  text-decoration: none;
+}
+main .ctn__flex .projects__footer ul a:any-link {
+  text-decoration: none;
+}
+main .ctn__flex .projects__footer ul svg path {
+  transition: fill 0.1s ease-out;
+}
+main .ctn__flex .projects__footer ul svg:hover {
+  filter: drop-shadow(0px 0px 3px rgb(255, 255, 255));
+}
+main .ctn__flex .projects__footer ul svg:hover path {
+  fill: rgb(255, 255, 255);
+}
+main .ctn__flex .projects__aside {
+  position: relative;
+  flex: 1;
+}
+main .ctn__flex .projects__aside .project__aside {
+  height: 100%;
+}
 
 @media screen and (max-width: 600px) {
   aside {
@@ -311,5 +436,10 @@ main .ctn__flex .about__aside {
   }
   aside nav ul {
     flex-direction: row;
+  }
+}
+@media screen and (max-width: 1220px) {
+  main .ctn__flex .about .about__header h2 {
+    font-size: 6rem;
   }
 }/*# sourceMappingURL=style.css.map */
