--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -217,7 +217,7 @@ main {
         .about {
             flex: 1;
             flex-basis: 300px;
-            max-width: 730px;
+            max-width: 700px;
             display: flex;
             gap: 60px;
             flex-direction: column;
@@ -236,6 +236,7 @@ main {
 
             &__header {
 
+
                 h2 {
                     font-family: 'Playfair Display', serif;
                     font-size: 8rem;    
@@ -245,6 +246,7 @@ main {
                     -webkit-background-clip: text;
                     color: transparent;
                     padding-left: 30px;
+                    word-wrap: break-word;
                 }
 
                 
@@ -269,12 +271,38 @@ main {
                     gap: 20px;
 
                     &__infos {
+                        position: relative;
                         display: flex;
                         flex-wrap: wrap;
                         gap: 20px;
-                        input {
+
+                        div {
+                            position: relative;
                             flex: 1;
                         }
+
+                        label {
+                            position: absolute;
+                            top: -50%;
+                            color: #5c5c5c ;
+                            left: 10px;
+                            display: none;
+                        }
+
+                        input {
+                            position: relative;
+                            width: 100%;
+
+                            &:focus + label{
+                                display: block;
+                            }
+
+                            &:focus::placeholder{
+                                opacity: 0;
+                            }
+
+                        }
+
 
                     }
 
@@ -304,12 +332,16 @@ main {
                         background: #cbcbcb;
                         cursor: pointer;
 
-
-                        &::after {
-                            content: url("data:image/svg+xml,%3Csvg width='20' height='20' fill='currentColor' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M21.955 2.857a.625.625 0 0 0-.813-.812L2.96 9.319h-.002l-.565.225a.625.625 0 0 0-.102 1.108l.512.325.002.003 6.243 3.972 3.973 6.244.003.002.325.513a.625.625 0 0 0 1.107-.104l7.5-18.75ZM19.664 5.22l.588-1.473-1.472.589-9.368 9.367.423.27a.607.607 0 0 1 .192.192l.27.422 9.367-9.367Z' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E");
-                            position: relative;
-
+                        &:hover,
+                        &:focus {
+                            background: white;
                         }
+
+                        // &::after {
+                        //     content: url("data:image/svg+xml,%3Csvg width='20' height='20' fill='currentColor' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M21.955 2.857a.625.625 0 0 0-.813-.812L2.96 9.319h-.002l-.565.225a.625.625 0 0 0-.102 1.108l.512.325.002.003 6.243 3.972 3.973 6.244.003.002.325.513a.625.625 0 0 0 1.107-.104l7.5-18.75ZM19.664 5.22l.588-1.473-1.472.589-9.368 9.367.423.27a.607.607 0 0 1 .192.192l.27.422 9.367-9.367Z' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E");
+                        //     position: relative;
+
+                        // }
                     }
 
                     textarea {
@@ -364,15 +396,147 @@ main {
 
             }
 
-        
-        
-            
-            
         }
 
         .about__aside {
             flex: 1;
-        }   
+        }
+
+        .projects {
+            flex: 1;
+            flex-basis: 300px;
+            max-width: 700px;
+            display: flex;
+            gap: 60px;
+            flex-direction: column;
+            font-family: 'Source Sans 3', sans-serif;
+
+
+            p, q {
+                color: var(--clr-text);
+                font-size: 1.2rem;             
+            }
+
+            span {
+                color: #9b9b9b;
+                font-weight: 600;
+            }
+
+            &__header {
+
+
+                h2 {
+                    font-family: 'Playfair Display', serif;
+                    font-size: 8rem;    
+                    background: linear-gradient(to right, #d4d4d4, rgb(255, 255, 255));
+                    background-size: 200% 200%;
+                    background-clip: text;
+                    -webkit-background-clip: text;
+                    color: transparent;
+                    padding-left: 30px;
+                    word-wrap: break-word;
+                }
+
+                
+            }
+
+            &__body {
+                display: flex;
+                flex-direction: column;
+                gap: 50px;
+
+                
+                ul {
+                    position: relative;
+                    display: flex;
+                    flex-direction: column;
+                    gap: 20px;
+                    list-style: none;
+                    
+                    li {
+                        position: relative;
+                        display: flex;
+                        align-items: center;
+                        background: rgb(34, 34, 34);
+                        height: 60px;
+                        border-radius: 5px;
+
+                        label {
+                            padding-left: 10px;
+                        }
+                        input {
+                            position: absolute;
+                            appearance: none;
+                            width: 100%;
+                            height: 100%;
+                            cursor: pointer;
+
+                            &:checked ~ label::backdrop{
+                                content: 'nafnapzfnoa';
+                                position: relative;
+                                color: red;
+                                width: 400px;
+                                background: white;
+                                aspect-ratio: 1/1;
+                            }
+                        }
+                    }
+                }      
+                
+
+            }
+
+            &__footer {
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+                q {
+                    font-style: italic;
+                }
+                ul {
+                    display: flex;
+                    gap: 40px;
+                    list-style: none;
+    
+                    a:any-link {
+                        text-decoration: none;
+                    }
+
+                    svg {
+
+                        path {
+                            transition: fill 0.1s ease-out;
+
+                        }
+
+                        &:hover {
+                            filter: drop-shadow(0px 0px 3px rgb(255, 255, 255));
+                        }
+                        
+                        &:hover {
+                            path {
+                                fill: rgb(255, 255, 255);
+
+                            }
+                        }
+
+                    }
+
+                }
+
+            }
+
+        }
+
+        .projects__aside {
+            position: relative;
+            flex: 1;
+
+
+            .project__aside {
+                height: 100%;
+            }
+        }
     }
 
      
@@ -395,4 +559,15 @@ main {
         }
     }
 }
+
+
+
+@media screen and (max-width: 1220px)
+{
+    main .ctn__flex .about .about__header h2
+    {
+        font-size: 6rem;
+    }
+}
+
 
