--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,6 +66,10 @@ h2 {
   font-size: 3rem;
 }
 
+h3 {
+  font-size: 2rem;
+}
+
 @keyframes apparition {
   100% {
     opacity: 1;
@@ -132,7 +136,7 @@ aside nav ul li a span {
 .hero {
   position: relative;
   background: black;
-  min-height: 100vh;
+  height: 100vh;
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -185,8 +189,9 @@ main .ctn__flex {
   -o-border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
      border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
   border-top: 1px solid;
-  min-height: 100vh;
+  height: 100vh;
   flex-wrap: wrap;
+  overflow: hidden;
 }
 main .ctn__flex .about {
   flex: 1;
@@ -323,24 +328,21 @@ main .ctn__flex .about__footer ul svg:hover path {
 main .ctn__flex .about__aside {
   flex: 1;
 }
-main .ctn__flex .projects {
-  flex: 1;
-  flex-basis: 300px;
-  max-width: 700px;
-  display: flex;
-  gap: 60px;
-  flex-direction: column;
+main .ctn__grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 200px 150px repeat(5, 60px);
+  gap: 20px 30px;
+  padding: 50px 200px;
   font-family: "Source Sans 3", sans-serif;
+  background: rgb(8, 8, 8);
+  -o-border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
+     border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
+  border-top: 1px solid;
+  min-height: 100vh;
 }
-main .ctn__flex .projects p, main .ctn__flex .projects q {
-  color: var(--clr-text);
-  font-size: 1.2rem;
-}
-main .ctn__flex .projects span {
-  color: #9b9b9b;
-  font-weight: 600;
-}
-main .ctn__flex .projects__header h2 {
+main .ctn__grid .projects__list--header {
+  grid-column: 2;
   font-family: "Playfair Display", serif;
   font-size: 8rem;
   background: linear-gradient(to right, #d4d4d4, rgb(255, 255, 255));
@@ -348,83 +350,154 @@ main .ctn__flex .projects__header h2 {
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
-  padding-left: 30px;
-  word-wrap: break-word;
-}
-main .ctn__flex .projects__body {
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
-}
-main .ctn__flex .projects__body ul {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  list-style: none;
-}
-main .ctn__flex .projects__body ul li {
-  position: relative;
-  display: flex;
-  align-items: center;
-  background: rgb(34, 34, 34);
-  height: 60px;
-  border-radius: 5px;
-}
-main .ctn__flex .projects__body ul li label {
+  word-break: break-all;
   padding-left: 10px;
 }
-main .ctn__flex .projects__body ul li input {
-  position: absolute;
+main .ctn__grid .projects__list--body--bio {
+  grid-column: 2/3;
+  font-family: "Source Sans 3", sans-serif;
+  color: var(--clr-text);
+  font-size: 1.2rem;
+}
+main .ctn__grid .projects__list--body--bio span {
+  color: #9b9b9b;
+  font-weight: 600;
+}
+main .ctn__grid label,
+main .ctn__grid input {
+  grid-column: 2;
+}
+main .ctn__grid #label_1,
+main .ctn__grid #input_1 {
+  grid-row: 3/4;
+}
+main .ctn__grid input {
   -webkit-appearance: none;
      -moz-appearance: none;
           appearance: none;
-  width: 100%;
-  height: 100%;
+  background: rgb(34, 34, 34);
+  border-radius: 5px;
   cursor: pointer;
 }
-main .ctn__flex .projects__body ul li input:checked ~ label::backdrop {
-  content: "nafnapzfnoa";
-  position: relative;
-  color: red;
-  width: 400px;
-  background: white;
-  aspect-ratio: 1/1;
+main .ctn__grid input:checked {
+  outline: 1px solid white;
+  background: rgb(53, 53, 53);
 }
-main .ctn__flex .projects__footer {
+main .ctn__grid label {
+  pointer-events: none;
+  z-index: 2;
+  padding: 20px;
+  font-size: 1.2rem;
+}
+main .ctn__grid #label_1,
+main .ctn__grid #label_2,
+main .ctn__grid #label_3,
+main .ctn__grid #label_4,
+main .ctn__grid #label_5 {
+  align-self: center;
+}
+main .ctn__grid #label_2,
+main .ctn__grid #input_2 {
+  grid-row: 4/5;
+}
+main .ctn__grid #label_3,
+main .ctn__grid #input_3 {
+  grid-row: 5/6;
+}
+main .ctn__grid #label_4,
+main .ctn__grid #input_4 {
+  grid-row: 6/7;
+}
+main .ctn__grid #label_5,
+main .ctn__grid #input_5 {
+  grid-row: 7/8;
+}
+main .ctn__grid input:checked + .project__image {
+  opacity: 1;
+}
+main .ctn__grid input:checked + .project__image + .project {
+  display: grid;
+}
+main .ctn__grid .project {
+  grid-column: 1;
+  grid-row: 4/8;
+  z-index: 2;
+  display: none;
+  grid-template-columns: subgrid;
+  grid-template-rows: min-content min-content auto;
+  padding: 30px;
+  gap: 20px;
+}
+main .ctn__grid .project__tags {
   display: flex;
-  flex-direction: column;
-  gap: 30px;
+  gap: 12px;
 }
-main .ctn__flex .projects__footer q {
-  font-style: italic;
-}
-main .ctn__flex .projects__footer ul {
-  display: flex;
-  gap: 40px;
-  list-style: none;
-}
-main .ctn__flex .projects__footer ul a:-moz-any-link {
-  text-decoration: none;
-}
-main .ctn__flex .projects__footer ul a:any-link {
-  text-decoration: none;
-}
-main .ctn__flex .projects__footer ul svg path {
-  transition: fill 0.1s ease-out;
-}
-main .ctn__flex .projects__footer ul svg:hover {
-  filter: drop-shadow(0px 0px 3px rgb(255, 255, 255));
-}
-main .ctn__flex .projects__footer ul svg:hover path {
-  fill: rgb(255, 255, 255);
-}
-main .ctn__flex .projects__aside {
+main .ctn__grid .project__tags--item {
   position: relative;
-  flex: 1;
+  display: flex;
+  align-self: center;
+  background: rgb(255, 255, 255);
+  color: black;
+  padding: 5px 15px;
+  border-radius: 4px;
+  height: -moz-fit-content;
+  height: fit-content;
 }
-main .ctn__flex .projects__aside .project__aside {
+main .ctn__grid .project__description {
+  font-size: 1.2rem;
+  color: var(--clr-text);
+}
+main .ctn__grid .project__links {
+  display: flex;
+  font-size: 1.1rem;
+  gap: 20px;
+}
+main .ctn__grid .project__links a {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  text-decoration: underline;
+  color: white;
+}
+main .ctn__grid .project__image {
+  grid-column: 1/2;
+  grid-row: 1/-1;
+  position: relative;
+  border-radius: 5px;
+  opacity: 0;
+  width: 100%;
   height: 100%;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  transition: opacity 0.2s ease-out;
+  overflow: hidden;
+}
+main .ctn__grid .project__image::before {
+  content: "";
+  background: linear-gradient(to top, rgba(8, 8, 8, 0.97) 10%, transparent);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  z-index: 2;
+}
+main .ctn__grid .project__image img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: left;
+     object-position: left;
+  filter: blur(5px);
+}
+
+.project__picture--bg {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+  background: linear-gradient(to right, transparent, rgba(2, 2, 2, 0.4) 20%, rgb(8, 8, 8) 52%);
+  z-index: 2;
 }
 
 @media screen and (max-width: 600px) {
