--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -70,6 +70,9 @@ h2 {
     font-size: 3rem;
 }
 
+h3 {
+    font-size: 2rem;
+}
 
 
 @keyframes apparition {
@@ -156,7 +159,7 @@ aside {
 .hero {
     position: relative;
     background: black;
-    min-height: 100vh;
+    height: 100vh;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -210,8 +213,9 @@ main {
         background: linear-gradient(to bottom, black, rgb(8, 8, 8) 25%);
         border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
         border-top: 1px solid;
-        min-height: 100vh;
+        height: 100vh;
         flex-wrap: wrap;
+        overflow: hidden;
 
 
         .about {
@@ -337,11 +341,6 @@ main {
                             background: white;
                         }
 
-                        // &::after {
-                        //     content: url("data:image/svg+xml,%3Csvg width='20' height='20' fill='currentColor' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' d='M21.955 2.857a.625.625 0 0 0-.813-.812L2.96 9.319h-.002l-.565.225a.625.625 0 0 0-.102 1.108l.512.325.002.003 6.243 3.972 3.973 6.244.003.002.325.513a.625.625 0 0 0 1.107-.104l7.5-18.75ZM19.664 5.22l.588-1.473-1.472.589-9.368 9.367.423.27a.607.607 0 0 1 .192.192l.27.422 9.367-9.367Z' clip-rule='evenodd'%3E%3C/path%3E%3C/svg%3E");
-                        //     position: relative;
-
-                        // }
                     }
 
                     textarea {
@@ -401,149 +400,236 @@ main {
         .about__aside {
             flex: 1;
         }
-
-        .projects {
-            flex: 1;
-            flex-basis: 300px;
-            max-width: 700px;
-            display: flex;
-            gap: 60px;
-            flex-direction: column;
-            font-family: 'Source Sans 3', sans-serif;
-
-
-            p, q {
-                color: var(--clr-text);
-                font-size: 1.2rem;             
-            }
-
-            span {
-                color: #9b9b9b;
-                font-weight: 600;
-            }
-
-            &__header {
-
-
-                h2 {
-                    font-family: 'Playfair Display', serif;
-                    font-size: 8rem;    
-                    background: linear-gradient(to right, #d4d4d4, rgb(255, 255, 255));
-                    background-size: 200% 200%;
-                    background-clip: text;
-                    -webkit-background-clip: text;
-                    color: transparent;
-                    padding-left: 30px;
-                    word-wrap: break-word;
-                }
-
-                
-            }
-
-            &__body {
-                display: flex;
-                flex-direction: column;
-                gap: 50px;
-
-                
-                ul {
-                    position: relative;
-                    display: flex;
-                    flex-direction: column;
-                    gap: 20px;
-                    list-style: none;
-                    
-                    li {
-                        position: relative;
-                        display: flex;
-                        align-items: center;
-                        background: rgb(34, 34, 34);
-                        height: 60px;
-                        border-radius: 5px;
-
-                        label {
-                            padding-left: 10px;
-                        }
-                        input {
-                            position: absolute;
-                            appearance: none;
-                            width: 100%;
-                            height: 100%;
-                            cursor: pointer;
-
-                            &:checked ~ label::backdrop{
-                                content: 'nafnapzfnoa';
-                                position: relative;
-                                color: red;
-                                width: 400px;
-                                background: white;
-                                aspect-ratio: 1/1;
-                            }
-                        }
-                    }
-                }      
-                
-
-            }
-
-            &__footer {
-                display: flex;
-                flex-direction: column;
-                gap: 30px;
-                q {
-                    font-style: italic;
-                }
-                ul {
-                    display: flex;
-                    gap: 40px;
-                    list-style: none;
-    
-                    a:any-link {
-                        text-decoration: none;
-                    }
-
-                    svg {
-
-                        path {
-                            transition: fill 0.1s ease-out;
-
-                        }
-
-                        &:hover {
-                            filter: drop-shadow(0px 0px 3px rgb(255, 255, 255));
-                        }
-                        
-                        &:hover {
-                            path {
-                                fill: rgb(255, 255, 255);
-
-                            }
-                        }
-
-                    }
-
-                }
-
-            }
-
-        }
-
-        .projects__aside {
-            position: relative;
-            flex: 1;
-
-
-            .project__aside {
-                height: 100%;
-            }
-        }
+   
     }
 
-     
+    .ctn__grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 200px 150px repeat(5, 60px);
+        gap: 20px 30px;
+        padding: 50px 200px;
+        font-family: 'Source Sans 3', sans-serif;
+        background: rgb(8, 8, 8);
+        border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
+        border-top: 1px solid;
+        min-height: 100vh;
+
+        .projects__list {
+
+            &--header {
+
+                grid-column: 2;
+
+                font-family: 'Playfair Display', serif;
+                font-size: 8rem;    
+                background: linear-gradient(to right, #d4d4d4, rgb(255, 255, 255));
+                background-size: 200% 200%;
+                background-clip: text;
+                -webkit-background-clip: text;
+                color: transparent;
+                word-break: break-all;
+                padding-left: 10px;
+
+
+            }
+
+            &--body {
+                &--bio {
+                    grid-column: 2/3;
+
+                    font-family: 'Source Sans 3', sans-serif;
+                    color: var(--clr-text);
+                    font-size: 1.2rem;
+
+                    span {
+                        color: #9b9b9b;
+                        font-weight: 600;
+                    }
+
+                }
+            }
+
+            
+            
+
+            
+        }
+
+        label,
+        input  {
+            grid-column: 2;
+        }
+
+        #label_1,
+        #input_1  {
+            grid-row: 3/4;
+        }
+
+        input {
+            appearance: none;
+            background: rgb(34, 34, 34);
+            border-radius: 5px;
+            cursor: pointer;
+
+
+            &:checked{
+                outline: 1px solid white;
+
+                background: rgb(53, 53, 53);
+            }
+
+        }
+
+        label {
+            pointer-events: none;
+            z-index: 2;
+            padding: 20px;
+
+            font-size: 1.2rem;
+
+        }
+
+        #label_1,
+        #label_2,
+        #label_3,
+        #label_4,
+        #label_5{
+            align-self: center;
+        }
+
+        #label_2,
+        #input_2  {
+            grid-row: 4/5;
+        }
+
+        #label_3,
+        #input_3  {
+            grid-row: 5/6;
+        }
+
+        #label_4,
+        #input_4  {
+            grid-row: 6/7;
+        }
+
+        #label_5,
+        #input_5  {
+            grid-row: 7/8;
+        }
+
+
         
 
-    }
+        input:checked + .project__image{
+            opacity: 1;
+        }
 
+        input:checked + .project__image + .project{
+            display: grid;
+        }
+    
+        .project {
+            grid-column: 1;
+            grid-row: 4/8;
+            z-index: 2;
+
+            display: none;
+            grid-template-columns: subgrid;
+            grid-template-rows: min-content min-content auto;
+            padding: 30px;
+            gap: 20px;
+
+            &__title {
+                
+            }
+
+            &__tags {
+                display: flex;
+                gap: 12px;
+
+                &--item {
+                    position: relative;
+                    display: flex;
+                    align-self: center;
+                    background: rgb(255, 255, 255);
+                    color: black;
+                    padding: 5px 15px;
+                    border-radius: 4px;
+                    height: fit-content;
+
+                }
+
+            }
+            &__description {
+                font-size: 1.2rem;
+                color: var(--clr-text);
+            }
+
+            &__links {
+                display: flex;
+                font-size: 1.1rem;
+                gap: 20px;
+                
+                a {
+                    display: flex;
+                    align-items: center;
+                    gap: 5px;
+                    text-decoration: underline;
+                    color: white;
+
+                    &:hover {
+                        
+                    }
+                }
+            }
+        }
+
+        .project__image {
+            grid-column: 1/2;
+            grid-row: 1/-1;
+
+            position: relative;
+            border-radius: 5px;
+            opacity: 0;
+            width: 100%;
+            height: 100%;
+            user-select: none;
+            transition:
+                opacity 0.2s ease-out;
+            overflow: hidden;
+
+            &::before {
+                content: "";
+                background: linear-gradient(to top, rgba(8, 8, 8, 0.97) 10%, transparent);
+                position: absolute;
+                height: 100%;
+                width: 100%;
+                z-index: 2;
+            }
+
+            img {
+                width: 100%;
+                height: 100%;
+                object-fit: cover;
+                object-position: left;
+                filter: blur(5px);
+
+            }
+            
+        }
+    }
+}
+
+.project__picture--bg {
+    position: absolute;
+    inset: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(to right, transparent, rgb(2 2 2 / 40%) 20%, rgb(8, 8, 8) 52%);
+    z-index: 2;
+}
+    
 
 @media screen and (max-width: 600px)
 {
@@ -569,5 +655,4 @@ main {
         font-size: 6rem;
     }
 }
-
 
