--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -213,7 +213,7 @@ main {
         background: linear-gradient(to bottom, black, rgb(8, 8, 8) 25%);
         border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
         border-top: 1px solid;
-        height: 100vh;
+        min-height: 100vh;
         flex-wrap: wrap;
         overflow: hidden;
 
@@ -405,8 +405,8 @@ main {
 
     .ctn__grid {
         display: grid;
-        grid-template-columns: 1fr 1fr;
-        grid-template-rows: 200px 150px repeat(5, 60px);
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: 200px auto repeat(5, 60px) 85px;
         gap: 20px 30px;
         padding: 50px 200px;
         font-family: 'Source Sans 3', sans-serif;
@@ -436,7 +436,7 @@ main {
 
             &--body {
                 &--bio {
-                    grid-column: 2/3;
+                    grid-column: 2;
 
                     font-family: 'Source Sans 3', sans-serif;
                     color: var(--clr-text);
@@ -536,7 +536,7 @@ main {
 
             display: none;
             grid-template-columns: subgrid;
-            grid-template-rows: min-content min-content auto;
+            grid-template-rows: repeat(4, min-content);
             padding: 30px;
             gap: 20px;
 
@@ -579,7 +579,7 @@ main {
                     color: white;
 
                     &:hover {
-                        
+
                     }
                 }
             }
@@ -654,5 +654,29 @@ main {
     {
         font-size: 6rem;
     }
+
+    main .ctn__grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 200px auto repeat(5, 60px) 85px auto
+    }
+
+    main .ctn__grid .projects__list--header,
+    main .ctn__grid .projects__list--body--bio,
+    main .ctn__grid label,
+    main .ctn__grid input
+    {
+        grid-column: 1;
+    }
+
+    main .ctn__grid .project__image{
+            grid-row: 8/-1;
+    }
+
+    main .ctn__grid .project {
+        grid-row: 9/-1;
+    }
+
+
+
 }
 
