--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -209,7 +209,7 @@ main {
         align-items: center;
         gap: 120px;
         width: 100%;
-        padding: 50px 200px;
+        padding: 50px 10vw;
         background: linear-gradient(to bottom, black, rgb(8, 8, 8) 25%);
         border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
         border-top: 1px solid;
@@ -407,7 +407,7 @@ main {
         grid-template-columns: repeat(2, 1fr);
         grid-template-rows: auto auto repeat(5, 60px) 85px;
         gap: 20px 30px;
-        padding: 50px 200px;
+        padding: 50px 10vw;;
         font-family: 'Source Sans 3', sans-serif;
         background: rgb(8, 8, 8);
         border-image: linear-gradient(to right, rgb(8, 8, 8) 10%, rgb(255, 255, 255), rgb(8, 8, 8) 90%) 1;
@@ -632,7 +632,6 @@ main {
         border-top: 1px solid;
         min-height: 100vh;
         flex-wrap: wrap;
-        overflow: hidden;
 
         .skills {
             display: flex;
@@ -688,6 +687,9 @@ main {
                         grid-auto-rows: 125px;
                         gap: 40px;
                         transition: grid-template-columns 0.225s ease-out;
+                        padding-bottom: 10px;
+                        overflow: hidden;
+
 
                         
                         &:has(.html:checked) {
@@ -1207,10 +1209,21 @@ footer {
             }
         }
     }
+
+
 }
 
 @media screen and (max-width: 1220px)
 {
+
+    main .ctn__skills .skills__body .list__skills {
+        gap: 10px;
+    }
+
+    main .ctn__skills .skills__body .list__skills .list__skills--item q{
+        font-size: 0.9rem;
+    }
+
     main .ctn__flex .about .about__header h2,
     main .ctn__grid .projects__list--header
     {
@@ -1219,7 +1232,8 @@ footer {
 
     main .ctn__grid {
         grid-template-columns: 1fr;
-        grid-template-rows: auto auto repeat(5, 60px) 85px auto
+        grid-template-rows: auto auto repeat(5, 60px) 85px auto;
+        
     }
 
     main .ctn__grid .projects__list--header,
